# info-sharing

./: README.md
backend/: .gitignore  app.py  nohup.out  pyproject.toml
frontend/src/components/: FileSharing.js  TextSharing.js
src/: App.css  App.js
src/components/: FileSharing.js
